tests/parser/bad/exps/exp_t-cid-lbrace-rbrace-at.scilexp
let a = None {Bool}. in True
